--- a/src/app/containers/monster-container/monster-container.html
+++ b/src/app/containers/monster-container/monster-container.html
@@ -2,7 +2,7 @@
   <input type="text" [(ngModel)]="monsterId">
   <button (click)="getMonster(monsterId)"> search</button>
 
-  <div class="monster">
+  <div class="monster" *ngIf="monster !== undefined">
     size: <span>{{monster?.name}}</span>
 
     <p>type: {{monster?.type}}</p><p *ngIf="monster?.subtype">subtype: {{monster?.subtype}}</p>
@@ -10,15 +10,16 @@
     <p>armor_class: {{monster?.armor_class}}</p>
     <p>hit_points: {{monster?.hit_points}}</p>
     <p>hit_dice: {{monster?.hit_dice}}</p>
-    <ul>
+    <div class="">
       <p>stats</p>
-      {{monster?.skillChart | json}}
+      <ul>
+        <li>strength: {{monster?.strength}}</li>
+        <li>dexterity: {{monster?.dexterity}}</li>
+        <li>constitution: {{monster?.constitution}}</li>
+        <li>intelligence: {{monster?.intelligence}}</li>
+        <li>wisdom: {{monster?.wisdom}}</li>
+      </ul>
       <pay-chart *ngIf="monster !== undefined" [chartData]="monster?.skillChart"></pay-chart>
-      <li>strength: {{monster?.strength}}</li>
-      <li>dexterity: {{monster?.dexterity}}</li>
-      <li>constitution: {{monster?.constitution}}</li>
-      <li>intelligence: {{monster?.intelligence}}</li>
-      <li>wisdom: {{monster?.wisdom}}</li>
-    </ul>
+    </div>
   </div>
 </div>
