--- a/src/app/containers/monster-container/monster-container.css
+++ b/src/app/containers/monster-container/monster-container.css
@@ -11,6 +11,11 @@
   position: absolute;
   z-index: 2;
   background: rgba(0,0,0,0.6);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 ul {
