--- a/src/app/containers/monster-container/monster-container.html
+++ b/src/app/containers/monster-container/monster-container.html
@@ -5,9 +5,9 @@
 
   <div class="monster" *ngIf="monster !== undefined">
     <p>name: {{monster?.name}}</p>
-    <p>size: {{monster?.size}}</p> 
+    <p>size: <span [ngClass]="monster?.size">{{monster?.size}}</span></p>
     <p>type: {{monster?.type}}</p> <p *ngIf="monster?.subtype">subtype: {{monster?.subtype}}</p>
-    <p>alignment: {{monster?.alignment}}</p>
+    <p>alignment: <span [ngClass]="monster?.alignment">{{monster?.alignment}}</span></p>
     <p>armor_class: {{monster?.armor_class}}</p>
     <p>hit_points: {{monster?.hit_points}}</p>
     <p>hit_dice: {{monster?.hit_dice}}</p>
