--- a/src/app/containers/monster-container/monster-container.css
+++ b/src/app/containers/monster-container/monster-container.css
@@ -1,3 +1,22 @@
+.monster {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.monster-item {
+  visibility: hidden;
+  position: absolute;
+}
+
+.monster-item.active {
+  visibility: visible;
+
+}
+
 .pieChart-container {
   position: relative;
   display: flex;
@@ -20,6 +39,28 @@
 
 ul {
   margin: 0px;
+}
+
+.dots {
+  position: absolute;
+  bottom: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  /* width: 100%; */
+}
+
+.dot {
+  width: 1em;
+  height: 1em;
+  background: white;
+  border-radius: 100%;
+  margin: 5px;
+  opacity: 0.5;
+}
+.dot.active {
+  opacity: 1;
 }
 
 .Fine {font-size: 0.5em}
